# Artyom_afisha

./: README.md  pyproject.toml  requirements.txt  views.py
Artyom_afisha/: apps.py  views.py
mysite/: settings.py  urls.py
places/: admin.py  apps.py  models.py  urls.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_alter_place_description_long.py  0003_image.py  0004_image_number.py  0005_alter_image_image.py  0006_alter_image_place.py  0007_auto_20230208_1336.py  0008_rename_place_id_place_slug.py  0009_remove_place_details_url.py  0010_alter_image_options.py  0011_remove_place_slug.py  0012_auto_20230214_1153.py  0013_alter_image_number.py  0014_alter_image_image.py
places/templates/: index.html
