[tool.poetry]
name = "artyom-afisha"
version = "0.1.0"
description = ""
authors = ["leeny_the_bear <leeny@inbox.ru>"]
readme = "README.md"
packages = [{include = "artyom_afisha"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"
django-tinymce = "3.4.0"
Pillow = "^9.4.0"
django-admin-sortable2 = "1.0.2"
python-dotenv = "^0.21.1"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

